Archive2/ef/0d042793a32dc9/output
main.cpp:7:5: error: stray '\320' in program
     auto а = [&]() { std::cout << i << std::endl; };
     ^
main.cpp:7:5: error: stray '\260' in program
main.cpp: In function 'void func(int)':
main.cpp:7:13: error: expected unqualified-id before '=' token
     auto а = [&]() { std::cout << i << std::endl; };
             ^
main.cpp:8:7: error: 'a' was not declared in this scope
     a();
       ^
main.cpp: At global scope:
main.cpp:5:16: warning: unused parameter 'i' [-Wunused-parameter]
 void func( int i )
                ^
